osmocore_HEADERS = signal.h linuxlist.h timer.h select.h msgb.h bits.h \
		   bitvec.h statistics.h utils.h \
		   gsmtap.h write_queue.h \
		   logging.h rate_ctr.h gsmtap_util.h \
		   plugin.h crc16.h panic.h process.h msgfile.h \
		   backtrace.h conv.h

if ENABLE_TALLOC
osmocore_HEADERS += talloc.h
endif

osmocoredir = $(includedir)/osmocom/core
