osmogsm_HEADERS = a5.h comp128.h gsm0808.h gsm48_ie.h mncc.h rxlev_stat.h \
		  gsm0480.h gsm48.h gsm_utils.h rsl.h tlv.h abis_nm.h \
		  sysinfo.h prim.h gsm0502.h lapd_core.h lapdm.h \
		  gsm0411_utils.h gsm0411_smc.h gsm0411_smr.h gan.h

SUBDIRS = protocol

osmogsmdir = $(includedir)/osmocom/gsm
